# esup-runner

./: .gitignore  DEVELOPMENT.md  README.md  RELEASE.md  SECURITY.md  update-stack.sh
manager/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  launcher.py  pyproject.toml  start  start.sh
manager/app/: __init__.py  __version__.py  main.py
manager/app/api/: openapi.py
manager/app/api/routes/: admin.py  api.py  logs.py  manager.py  runner.py  statistics.py  task.py
manager/app/core/: _check_output.py  auth.py  config.py  passwords.py  paths.py  persistence.py  priorities.py  runner_store.py  setup_logging.py  state.py
manager/app/models/: models.py
manager/app/services/: background_service.py  email_service.py  runner_service.py  task_callback_service.py  task_dispatch_service.py  task_result_service.py  task_service.py
manager/app/web/static/: esup-runner.css  esup-runner.js
manager/app/web/templates/: admin.html  credentials.html  documentation.html  logs.html  logs_partial.html  logs_search.html  runner_detail.html  statistics.html  task_detail.html  tasks.html
manager/docs/: CHANGELOG.md  CONFIGURATION.md  DOCKER.md  INSTALLATION.md  MANAGER_CONFIGURATION.md  OPERATIONS.md  PARAMETERS.md  README.md  UPGRADE.md  VERSION_MANAGEMENT.md
manager/production/: esup-runner-manager.service
manager/scripts/: check_config.py  check_pipeline_tasks.py  check_runtime.py  check_version.py  example_async_client.py  generate_architecture_diagram.py  generate_password.py  generate_passwords.py  generate_token.py  generate_tokens.py  generate_tree_diagram.py  init.py  manage_version.py  restart_manager.sh  status_manager.sh  stop_manager.sh
manager/tests/: conftest.py  task_routes_helpers.py  test_admin_routes.py  test_api_routes.py  test_auth.py  test_background_service.py  test_check_config.py  test_check_output.py  test_check_pipeline_tasks.py  test_check_runtime.py  test_config.py  test_email_service.py  test_integration.py  test_load_tasks.py  test_logs_routes.py  test_main_module.py  test_manager_routes.py  test_models_url_validation.py  test_notify_url_validation.py  test_openapi_auth.py  test_openapi_config.py  test_passwords.py  test_persistence_extended.py  test_priorities.py  test_priorities_unit.py  test_runner_heartbeat_payload_unit.py  test_runner_routes.py  test_runner_service_unit.py  test_runner_storage_result.py  test_runner_store.py  test_setup_logging.py  test_specific_task.py  test_state_module.py  test_task_bulk_actions.py  test_task_callbacks.py  test_task_dispatch.py  test_task_results.py  test_task_route_service_extraction.py  test_task_routes.py  test_task_runner_auth_headers.py  (+1 more)
runner/: .coveragerc  .dockerignore  .env.example  .flake8  Dockerfile  Makefile  launcher.py  pyproject.toml
runner/app/: __init__.py  __version__.py  main.py
runner/app/api/: openapi.py
runner/app/api/routes/: runner.py  task.py
runner/app/core/: _check_output.py  auth.py  config.py  disk_usage.py  media_denylist.py  setup_logging.py  state.py  storage_checks.py
runner/app/managers/: process_manager.py  service_manager.py  storage_manager.py
runner/app/models/: models.py
runner/app/services/: email_service.py  email_templates.py  manager_service.py  result_manifest.py  task_dispatcher.py  task_recovery.py  task_results.py
runner/app/task_handlers/: __init__.py  base_handler.py
runner/app/task_handlers/encoding/: __init__.py  encoding.py  encoding_handler.py
runner/app/task_handlers/encoding/core/: __init__.py  dressing_runtime_utils.py  encoding_flow_utils.py  ffmpeg_command_utils.py  ffmpeg_runtime_utils.py  main_orchestration_utils.py  main_runtime_utils.py  media_probe_utils.py  metadata_runtime_utils.py  overview_utils.py  rendition_utils.py  runtime_args_utils.py  runtime_flow_utils.py
runner/app/task_handlers/encoding/scripts/: encoding.py
runner/app/task_handlers/studio/: __init__.py  studio.py  studio_handler.py
runner/app/task_handlers/studio/core/: __init__.py  download_runtime_utils.py  ffmpeg_command_utils.py  (+9 more)
runner/app/task_handlers/transcription/: __init__.py  transcription.py  transcription_handler.py
runner/docs/: CHANGELOG.md  CONFIGURATION.md  DOCKER.md  FFMPEG_SETUP.md  INSTALLATION.md  OPERATIONS.md  PARAMETERS.md  README.md  RUNNER_CONFIGURATION.md  RUNNER_PARAMETERS.md  TYPE_ENCODING.md  TYPE_STUDIO.md  TYPE_TRANSCRIPTION.md  UPGRADE.md  VERSION_MANAGEMENT.md
runner/docs/gpu/: DEBIAN11_CUDA12_4.md  DEBIAN12_CUDA13_2.md  FFMPEG_DOCKER.md  FFMPEG_PREBUILT.md  FFMPEG_SOURCE.md  README.md
runner/production/: esup-runner-runner.service
runner/scripts/: check_config.py  check_ffmpeg.py  check_gpu.py  check_runner_resources.py  check_runner_storage.py  check_version.py  generate_tree_diagram.py  init.py  manage_version.py  manual_cleanup.py
runner/tests/: conftest.py  studio_legacy_runtime_api.py  test_api_openapi.py  test_api_runner_routes.py  test_api_task_recovery_helpers_coverage.py  test_api_task_routes.py  test_auth.py  test_base_handler_extra_coverage.py  test_check_config.py  test_check_ffmpeg.py  test_check_gpu.py  test_check_runner_resources.py  test_check_runner_storage.py  test_cleanup.py  test_config_coverage.py  test_disk_usage.py  test_encoding.py  test_encoding_core_coverage.py  test_encoding_core_coverage_completion.py  test_encoding_core_dressing_runtime_utils_coverage.py  test_encoding_core_ffmpeg_runtime_utils_coverage.py  test_encoding_core_media_overview_utils_coverage.py  test_encoding_core_runtime_flow_noexclude_coverage.py  test_encoding_core_runtime_flow_wrappers_coverage.py  test_encoding_params.py  test_encoding_transcription_noexclude_batch1.py  test_entrypoint_wrappers_coverage.py  test_init_script.py  test_integration.py  test_logging_coverage.py  test_main_lifespan_coverage.py  test_manager_service_unit.py  test_media_denylist.py  test_process_manager_grouped_task_types.py  test_process_manager_uvicorn_failure.py  test_resilience.py  test_runtime_services_coverage.py  test_script_timeouts.py  test_setup_logging.py  test_state_extra_coverage.py  (+26 more)
(+38 files in other folders)
